fix: inline splash styles and align application card action button with loan list

--- a/src/app/pages/applications/components/action-application/action-application.less
+++ b/src/app/pages/applications/components/action-application/action-application.less
@@ -1,3 +1,5 @@
+@import 'mixins';
+
 :host {
   flex: 1 1 auto;
   display: flex;
@@ -7,3 +9,13 @@
   flex-wrap: wrap;
   row-gap: 12px;
 }
+
+.media(@media-sm, {
+  :host {
+    width: 100%;
+  }
+
+  .action {
+    width: 100%;
+  }
+});
